
This file summarizes user visible changes for each release.

Release 2.2.0 2020/07/18
-------------------------

The report_units reports the current units used by commands.

  report_units

The report_check_types -min_fanout -max_fanout -max_capacitance -min_capacitance

  report_check_types [-min_fanout] [-max_fanout] [-max_capacitance] [-min_capacitance]


Release 2.0.0 2018/09/28
-------------------------

The command line options have changed to the following:

  -help              show help and exit
  -version           show version and exit
  -no_init           do not read .sta init file
  -threads count|max use count threads
  -no_splash         do not show the license splash at startup
  -exit              exit after reading cmd_file
  cmd_file           source cmd_file


....

Builds using Autotools/configure are no longer supported.
Use CMake as documented in README.md.

....

The check_timing command -no_output_delay checks output ports for
set_output_delay.

....

The report_power command reports the power consumption of the design
or a specific instance.

  report_power [-instances inst] [-digits digits] [> filename] [>> filename]

The internal, switching, leakage and total power are reported. Design
power is reported separately for combinational, sequential, macro and
pad groups.

Use -instances to report power for a specific instance.

Use the set_power_activity command to specify activity/duty
globally using -global, the input port default using -input,
or for input ports using -input_ports, or pins using -pins.

 set_power_activity [-global]
                    [-input]
                    [-input_ports ports]
		    [-pins pins]
		    [-activiity activity]
		    [-duty duty]

....

The write_path_spice command writes a spice netlist for a timing path.

  write_path_spice -path_args path_args
    -spice_directory spice_directory
    -subckt_file subckt_file
    -lib_subckt_file lib_subckts_file\
    -model_file model_file
    -power power