@@ -15,6 +15,8 @@ The report_check_types -min_fanout -max_fanout -max_capacitance -min_capacitance
   report_check_types [-min_fanout] [-max_fanout] [-max_capacitance] [-min_capacitance]
 
 
+The insert_buffer command is no longer supported.
+
 Release 2.0.0 2018/09/28
 -------------------------
 
